# ai-radar-hackathon2k26

./: .env.example  .gitignore  README.md  pyproject.toml  start.sh
backend/: config.py  database.py  main.py  models.py
backend/agents/: base.py  competitor_watcher.py  digest_compiler.py  hf_benchmark_tracker.py  model_provider_watcher.py  research_scout.py
backend/config_store/: default_sources.yaml
backend/flows/: daily_pipeline.py
backend/routers/: digests.py  findings.py  runs.py  sources.py
backend/services/: change_detector.py  email_sender.py  extractor.py  fetcher.py  pdf_renderer.py  summarizer.py
backend/templates/: digest.html
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/analytics/: page.tsx
frontend/app/digests/: page.tsx
frontend/app/findings/: page.tsx
frontend/app/runs/: page.tsx
frontend/app/runs/[id]/: page.tsx
frontend/app/sources/: page.tsx
frontend/lib/: api.ts
tests/: test_change_detector.py  test_extractor.py  test_fetcher.py  test_integration.py
